--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="5;url=test.html" />
     <title>Typing Effect With CSS</title>
-    <link rel="stylesheet" href="https://github.com/Asoatram/testing/blob/main/style.css">
+    <link rel="stylesheet" href="asoatram.github.io/style.css">
 </head>
 <body>
     <h1 class="typewriter">Hi, Erlin...</h1>
