--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="5;url=test.html" />
-    <title>Typing Effect With CSS</title>
+    <title>HI, Erlin.....</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
