--- a/test.html
+++ b/test.html
@@ -37,7 +37,7 @@
         <a href="gallery.html">Photos</a>
         <a href="music.html">Music</a>
         <a href="wheel.html">Wheel</a>
-        <a href="https://www.instagram.com/mdr.daffa/" target="_blank">Twitter</a>
+        <a href="https://twitter.com/punyakitaaaaa" target="_blank">Twitter</a>
       <div class="biar-itam">
       <a href="https://www.instagram.com/mdr.daffa/" target="_blank"><img class="foto kiri" id ="instagram" src="instagram logo3.jpg" width="75px" height="60px"> </a>
       </div>
