--- a/wheel.html
+++ b/wheel.html
@@ -21,16 +21,16 @@
         <div id="mainbox" class="mainbox">
           <div id="box" class="box">
             <div class="box1">
-              <span class="span1"><b>Iron Man</b></span>
-              <span class="span2"><b>7500</b></span>
-              <span class="span3"><b>Bat Man</b></span>
-              <span class="span4"><b>Joker</b></span>
+              <span class="span1"><b>Naskun</b></span>
+              <span class="span2"><b>Nasgor</b></span>
+              <span class="span3"><b>Geprek</b></span>
+              <span class="span4"><b>Sate</b></span>
             </div>
             <div class="box2">
-              <span class="span1"><b>Shoplifters</b></span>
-              <span class="span2"><b>Inception</b></span>
-              <span class="span3"><b>Deadpool</b></span>
-              <span class="span4"><b>Terminator</b></span>
+              <span class="span1"><b>Mie Ayam</b></span>
+              <span class="span2"><b>Coto</b></span>
+              <span class="span3"><b>Martabak</b></span>
+              <span class="span4"><b>Terang Bulan</b></span>
             </div>
           </div> 
           <button class="spin" onclick="rotateFunction()">SPIN</button>
@@ -47,9 +47,9 @@
         <a href="test.html">Home</a>
         <a href="Blog.html">Blog</a>
         <a href="calendar.html">Calendar</a>
-        <a href="#">Photos</a>
+        <a href="galery.html">Photos</a>
         <a href="music.html">Music</a>
-        <a href="https://www.instagram.com/mdr.daffa/" target="_blank">Twitter</a>
+        <a href="https://twitter.com/punyakitaaaaa" target="_blank">Twitter</a>
       <div class="biar-itam">
       <a href="https://www.instagram.com/mdr.daffa/" target="_blank"><img class="foto kiri" id ="instagram" src="instagram logo3.jpg" width="75px" height="60px"> </a>
       </div>
